/*
 * $Id: ChangeLog,v 1.1217 2014-02-04 21:23:00 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-02-04 15:19 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * samples/oohg/oohgrecord/px.prg
     ! Fixed (again!) sign change on WriteBigEndian() function.
     - Removed hack for change double-quotation marks on
       string fields (BDE doesn't works so).
     ! Fixed ::Seek(,.T.) when key is lower than first record.
     ! Corrected DateTime processing.
   * samples/oohg/stream/TStream.prg
     ! Added autofill functionality to ::Len(), ::Left(), ::Right(),
       ::Substr() and ::Skip() methods.
   * source/c_cdiplus.c
     + Added PRG level GPlusDisposeImage (GdipDisposeImage) function.
     ! GDIPPLUSSHUTDOWN and GDIPGETIMANGETHUMBNAIL typos corrected.

2014-01-27 16:54 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_combo.prg
     ! COMBOBOX control with DISPLAYEDIT clause is not painted
       properly.
     ; Thanks to David Field for the solution.

2014-01-24 19:20 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_comm.prg
   * source/h_form.prg
   * source/h_grid.prg
   * source/h_ini.prg
   * source/h_print.prg
   * source/h_registry.prg
   * source/h_xbrowse.prg
   * source/miniprint.prg
   * source/winprint.prg
     ! Some DateTime type support added.

2014-01-22 18:02 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_xbrowse.prg
     ! Fixed record update when row is selected with right click.

2014-01-20 17:03 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_combo.prg
     ! BackSpace not working properly in COMBOBOX control with
       DISPLAYEDIT and INCREMENTAL clauses.

2014-01-15 11:28 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * ./ChangeLog
     * Previous entry amended.
   * source/h_controlmisc.prg